# Individual-Project-2

./: Cargo.toml  Makefile  README.md  flightsDB.db
.github/workflows/: cicd.yml
rust-cli-binary/: Cargo.toml  test_flights.csv  test_flightsDB.db
rust-cli-binary/src/: lib.rs  main.rs
rust-cli-binary/test/: test.rs
rust-cli-binary/tests/: test.rs
src/: lib.rs  main.rs
