[package]
name = "rust-cli-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
csv = "1.3.0"
serde = "1.0.189"
reqwest = { version = "0.11.22", features = ["blocking"] }
rusqlite = "0.29.0"